@@ -1,2 +1,0 @@
-ActionController::Base.send :include, AutoComplete
-ActionController::Base.helper AutoCompleteMacrosHelper
